--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -34,6 +34,9 @@
                 <li class='nav-item'>
                     <a class='nav-link' href="{% url 'pages:index' %}">
                         Theory</a></li>
+                <li class='nav-item'>
+                  <a class='nav-link' href="{% url 'techniques_app:index' %}">
+                      Techniques</a></li>
             </ul><!-- End of links on left side of nvbar -->
             <!-- Account related links-->
             <ul class='navbar-nav ms-auto mb-2 mb-md-0'>
