workign with techniques app managed to update most templates and make them flow problems with the save system

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -8,6 +8,9 @@
     {% load django_bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    {% load static %}
+    <link rel="stylesheet" href="{% static "between_app/css/style.css" %}">
+
 </head>
 
 <body class='bg-light'>
