--- a/techniques_app/templates/techniques_app/group_list.html
+++ b/techniques_app/templates/techniques_app/group_list.html
@@ -1,22 +1,60 @@
-{% extends 'blog_app/base.html' %}
+{% extends 'between_app/_base.html' %}
+
+{% block title %}Components list{% endblock title %}
 
 {% block page_header%}
-<h2>Component:{{topic|title}}</h2>
+<h2>Component List:{{topic|title}}</h2>
 {% endblock page_header %}
 
 {%block content%}
+<p>Press to see community techniques by component</p>
+<!--Subjective component-->
 <div class='card' style="max-width: 800px;">
-<ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
-{%for blog in blogs %}
-        <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'blog_app:blog' blog.id %}">{{blog}}</a>: "{{blog.text|slice:":50"}}..."</li>
-{%empty%}
-        <li>No tecniques added yet</li>
-{%endfor%}
-</ul>
-{% if user.is_authenticated %}
-    <ul>
-        <li><a href="{%url 'blog_app:new_blog' %}">*Add new blog*</a></li>
-</ul>
-{% endif %}
+ <h3 class='card-title soft-green'>Subjective</h3>
+        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+        {%for subj in subjective %}
+                <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' subj.pk %}">{{subj.name|title}}</a>: "{{subj.about}}"</li>
+        {%empty%}
+                <li>No tecniques added yet</li>
+        {%endfor%}
+        </ul>
+
+<!--Extended component-->
+<div class='card' style="max-width: 800px;">
+ <h3 class='card-title soft-green'>Extended Awareness</h3>
+
+        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+        {%for ext in extended %}
+                <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' ext.pk %}">{{ext.name|title}}</a>: "{{ext.about}}"</li>
+        {%empty%}
+                <li>No tecniques added yet</li>
+        {%endfor%}
+        </ul>
+
+<!--culture component-->
+<div class='card' style="max-width: 800px;">
+ <h3 class='card-title soft-green'>Culture</h3>
+
+        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+        {%for cult in culture %}
+                <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' cult.pk %}">{{cult.name|title}}</a>: "{{cult.about}}"</li>
+        {%empty%}
+                <li>No tecniques added yet</li>
+        {%endfor%}
+        </ul>
+
+<!--Identity component-->
+<div class='card' style="max-width: 800px;">
+ <h3 class='card-title soft-green'>Identity</h3>
+
+        <ul class='list-group border-bottom pb-2 mb-4 list-group-flash'>
+        {%for id in identity %}
+                <li class='list-group-item boder-1'><a class='link-secondary' href="{%url 'techniques_app:techniques_short_community' id.pk %}">{{id.name|title}}</a>: "{{id.about}}"</li>
+        {%empty%}
+                <li>No tecniques added yet</li>
+        {%endfor%}
+        </ul>
+
+
 </div>
 {%endblock content%}
