techniques app working with save and eliminate from saved

--- a/techniques_app/templates/techniques_app/edit-technique.html
+++ b/techniques_app/templates/techniques_app/edit-technique.html
@@ -1,7 +1,7 @@
 {% extends 'between_app/_base.html' %}
 
 {% block title %}Technique{% endblock title %}
-
+{% load django_bootstrap5 %}
 {% block page_header %}{{technique.name|title}}
 {% endblock page_header %}
 
@@ -10,10 +10,10 @@
 
 <a href="{%url 'techniques_app:technique' technique.pk %}"> <h2>Name: {{technique}}</h2></a>
 
-<a href="{%url 'techniques_app:techniques_short_community' technique.component %}"><p>Component: {{technique.component}}</p></a>
+<a href="{%url 'techniques_app:techniques_short_community' technique.component.pk %}"><p>Component: {{technique.component}}</p></a>
 
 
-<p>Edit Entry</p>
+<p>Edit your Technique</p>
 
 <form action="{%url 'techniques_app:edit_technique' technique.pk %}" method='post'>
     {% csrf_token %}
