flat pages, about created

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -89,14 +89,14 @@
                 <a class="nav-link fw-light" aria-current="page" href="mailto:gsoler@protonmail.com">Email</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-light" href="#">About</a>
+                <a class="nav-link fw-light" href='/about/'>About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-light" href="#">Therapy</a>
+                <a class="nav-link fw-light" href='/about/'>Therapy</a>
               </li>
             </ul>
             <span class="navbar-text fw-light">
-              All content was created and developed by the Dr Gabriel Soler.
+              All content was created and developed by Dr Gabriel Soler.
             </span>
           </div>
         </div>
