--- a/pages/templates/pages/history.html
+++ b/pages/templates/pages/history.html
@@ -1,3 +1,14 @@
+{% extends 'between_app/_base.html' %}
+
+{% block title %}History{% endblock title %}
+
+{% block page_header%}
+<h2>History of Psychotherapy:</h2>
+{% endblock page_header %}
+
+{%block content%}
+
+
 
 <!-- side table of contents -->
 <div class="row">
@@ -63,9 +74,9 @@
         <li>Two people in psychological contact,</li>
         <li>Client being incongruent, vulnerable or anxious,</li>
         <li>the therapists being congruent,</li>
-        <li>having uncondicional positive regard (UPR) for the client,</li>
+        <li>having unconditional positive regard (UPR) for the client,</li>
         <li>experiencing an empathetic understanding of the client's frame of reference,</li>
-        <li>the therapist being able to comunicate the UPR and empathy for the client.</li>
+        <li>the therapist being able to communicate the UPR and empathy for the client.</li>
     </ol>
     <p>I have written the six because it is common to see them reduced to only three. I particularly find the first one, keeping psychological contact, to maybe the most important thing to keep in mind.</p>
     <p>In a way, this is the first attempt to propose 'common factors', a project that will emerge later in the century. Rogers created a school and trained counselors to be able to provide these conditions.</p>
@@ -96,3 +107,4 @@
     <p>We can find people who are more hard, or soft in this approach, but it tends to encompass a group of thinkers who do not believe in a concrete reality to find out there.</p>
     <p>Some versions are closer to what we will see later called 'participatory', but at this stage, it contrasts with the positivistic group, who believe we can access reality as it is, directly through experience.</p>
 
+{% endblock content%}
