--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -86,7 +86,7 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link fw-light" aria-current="page" href="mailto:gsoler@protonmail.com">Email</a>
+                <a class="nav-link fw-light" aria-current="page" href="mailto:creatherapy.app@gmail.com">Email</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-light" href='/about/'>About</a>
