Workign with the email, made it so it brings errors back, missing: get third party to make it async

--- a/between_app/templates/between_app/BigTraditions/traditions_detail.html
+++ b/between_app/templates/between_app/BigTraditions/traditions_detail.html
@@ -1,5 +1,5 @@
 {% extends 'between_app/_base.html' %}
-{%block title%} Traditions List {%endblock title %}
+{%block title%} Traditions Detail {%endblock title %}
 
 {% block content %}
 
