--- a/between_app/templates/between_app/Components/components_test.html
+++ b/between_app/templates/between_app/Components/components_test.html
@@ -2,7 +2,7 @@
 {% load django_bootstrap5 %}
 
 {% block page_header%}
-<h2>Components</h2>
+<h2>Components Test</h2>
 {% endblock page_header%}
 {%block content%}
 <p> Please slide an approximation of how much you identify with these areas of work</p>
