--- a/between_app/templates/between_app/BigTraditions/traditions_list.html
+++ b/between_app/templates/between_app/BigTraditions/traditions_list.html
@@ -1,5 +1,5 @@
 {% extends 'between_app/_base.html' %}
-{%block title%} Traditions List {%endblock title %}
+{%block title%}Your Traditions Tests {%endblock title %}
 
 {% block content %}
 
