fixed link breaks in journal shadow and creation

--- a/learning_logs/templates/learning_logs/shadow/new_shadow.html
+++ b/learning_logs/templates/learning_logs/shadow/new_shadow.html
@@ -12,7 +12,7 @@
     {% bootstrap_button button_type='submit' content='New Shadow Journal' %}
   </form>
 
-  <a href="{% url 'learning_logs:shadow_by_date' %}" class="card-link">Back to Shadow list</a>
+  <a href="{% url 'learning_logs:shadows_by_date' %}" class="card-link">Back to Shadow list</a>
   <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
 
 </br></br>
