--- a/learning_logs/templates/learning_logs/creating/create_reflection.html
+++ b/learning_logs/templates/learning_logs/creating/create_reflection.html
@@ -13,7 +13,7 @@
   </form>
 
 
-<a href="{% url 'learning_logs:creation_by_date' %}" class="card-link">Back to Creations list</a>
+<a href="{% url 'learning_logs:creations_by_date' %}" class="card-link">Back to Creations list</a>
 <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
 
 </br></br>
