--- a/learning_logs/templates/learning_logs/creating/creation_by_date.html
+++ b/learning_logs/templates/learning_logs/creating/creation_by_date.html
@@ -22,7 +22,7 @@
     <li>There are no entries for this topic yet. </li>
   </ul>
 
-  <a href="{% url 'learning_logs:creation_by_date' %}" class="card-link">Back to Creations list</a>
+  <a href="{% url 'learning_logs:index' %}" class="card-link">Back to index</a>
 <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
 
 </br></br>
