--- a/learning_logs/templates/learning_logs/shadow/shadow_by_date.html
+++ b/learning_logs/templates/learning_logs/shadow/shadow_by_date.html
@@ -24,7 +24,7 @@
   </ul>
   {% endfor %}
 
-  <a href="{% url 'learning_logs:shadow_by_date' %}" class="card-link">Back to Shadow list</a>
+  <a href="{% url 'learning_logs:shadows_by_date' %}" class="card-link">Back to Shadow list</a>
   <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journaling</a>
 
 
