--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -12,7 +12,8 @@
   </div>
 <div class="card mb-3">
     <div class="card-body">
-<h2 class="card-title">Hey! </h2>
+<h2 class="card-title">Hey!
+  {% if user.is_authenticated%}{{user.username}}{%endif%} </h2>
 <p class="card-text">CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
 <p class="card-text">They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
 <a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
