--- a/between_app/templates/between_app/personal_style/positions_list.html
+++ b/between_app/templates/between_app/personal_style/positions_list.html
@@ -1,5 +1,5 @@
 {% extends 'between_app/_base.html' %}
-{%block title%} List {%endblock title %}
+{%block title%}Profile Tests List{%endblock title %}
 
 {% block content %}
 
