--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -11,6 +11,11 @@
     {% load static %}
     <link rel="stylesheet" href="{% static "between_app/css/style.css" %}">
 
+<!--favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "favicon_io/apple-touch-icon.png"%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "favicon_io/favicon-32x32.png"%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "favicon_io//favicon-16x16.png"%}">
+    <link rel="manifest" href="/site.webmanifest">    
 </head>
 
 <body class='bg-light'>
