--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -21,8 +21,14 @@
 <body class='bg-light'>
 <nav class="navbar navbar-expand-lg bg-primary sticky-top start-0" data-bs-theme="dark">
     <div class='container-fluid'>
+
         <a class='navbar-brand' href="{% url 'between_app:index' %}">
-            CreaTherapy</a>
+          <img
+          src="{% static "favicon_io/favicon-32x32.png"%}"
+          class="img-fluid rounded"
+          alt=""
+        />  
+          CreaTherapy</a>
 
         <button class='navbar-toggler' type='button' data-bs-toggle='collapse'
         data-bs-target='#navbarCollapse' aria-controls='navbarCollapse'
