--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -3,17 +3,22 @@
 {%block title%}CreaTherapy{%endblock title%}
 {% load django_bootstrap5%}
 
-{%block page_header%}CreaTherapy:{%endblock page_header%}
+{%block page_header%}{%endblock page_header%}
 
 
 {%block content%}
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
     Work in Progress!
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+    </button>
   </div>
+
 <div class="card mb-3">
     <div class="card-body">
+
 <h2 class="card-title">Hey!
   {% if user.is_authenticated%}{{user.username}}{%endif%} </h2>
+    <div class="col-lg-6 mx-auto">
 <p class="card-text">CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
 <p class="card-text">They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
 <a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
