added async email and fixed emal sent bug by sending plane text results. created a thread class and a function to achieve both

--- a/between_app/templates/between_app/email/personal_style_email.html
+++ b/between_app/templates/between_app/email/personal_style_email.html
@@ -3,7 +3,7 @@
 <html lang='en'> 
 <head>
   <meta http-equiv="Content-Type" content="html; charset=UTF-8" />
-  <title>Profile Email/title>
+  <title>Profile Email</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body style="margin: 0; padding: 0;">
@@ -24,6 +24,7 @@
     <p ><b>Shadow</b>:{{position.shadow}}</p>
     <p ><b>Traditions</b>:{{position.traditions}}</p>
     <p ><b>Authors</b>:{{position.authors}}</p>
+
 <H1>Your main Path</H1>
     <div class="card bg-active mb-3">
     <div class="card-body">
@@ -33,6 +34,7 @@
     <p ><b>Shadow</b>:{{path.shadow}}</p>
     <p ><b>Traditions</b>:{{path.traditions}}</p>
     <p ><b>Authors</b>:{{path.authors}}</p>
+
 <H1>Your main relationship with the Tradition</H1>
     <div class="card bg-active mb-3">
     <div class="card-body">
@@ -47,4 +49,3 @@
 </table>
 </body>
 </html>
-
