--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -33,9 +33,8 @@
             style="font-family:'Edu AU VIC WA NT Hand',verdana,san-serif;">
           <img
           src="{% static "favicon_io/favicon-32x32.png"%}"
-          class="img-fluid rounded"
+          class="img-fluid rounded mb-2"
           alt=""
-          
         />  
           CreaTherapy</a>
 
