moved favicons to between_app, because whitenoise was not recognising them (it seems it is the problem)

--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -18,10 +18,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap&text=CreaTherapy" rel="stylesheet">
 
 <!--favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static "favicon_io/apple-touch-icon.png"%}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static "favicon_io/favicon-32x32.png"%}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static "favicon_io//favicon-16x16.png"%}">
-    <link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "between_appfavicon_io/apple-touch-icon.png"%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "between_appfavicon_io/favicon-32x32.png"%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "between_appfavicon_io//favicon-16x16.png"%}">
+    <link rel="manifest" href="{% static 'between_appfavicon_io/site.webmanifest' %}">
 
 </head>
 
