--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -21,8 +21,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static "between_appfavicon_io/apple-touch-icon.png"%}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static "between_appfavicon_io/favicon-32x32.png"%}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "between_appfavicon_io//favicon-16x16.png"%}">
-    <link rel="manifest" href="{% static 'between_appfavicon_io/site.webmanifest' %}">
-
+<!--   <link rel="manifest" href="{% static 'between_appfavicon_io/site.webmanifest' %}">
+-->
 </head>
 
 <body class='bg-light'>
